deployments/kubernetes/nginx-req-000010/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test555
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: test555
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app: nginx
        app.kubernetes.io/name: nginx
        app.kubernetes.io/managed-by: ai-deployment-platform
      namespace: test555
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: test555
  labels:
    app: nginx
    app.kubernetes.io/name: nginx
    app.kubernetes.io/managed-by: ai-deployment-platform
spec:
  selector:
    app: nginx
    app.kubernetes.io/name: nginx
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: metrics
    port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: test555
  labels:
    app: nginx
    app.kubernetes.io/name: nginx
    app.kubernetes.io/managed-by: ai-deployment-platform
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: nginx.hpe.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
